Subida segunda parte del codigo migracion amiga 5