@@ -2,11 +2,10 @@ package com.inditex.rrhh.icmclcwb.ptr.venta;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Map;
 
 import com.inditex.amigafwk.common.rest.client.RestClient;
-import com.inditex.amigafwk.test.randomizer.RandomizerExtension;
 import com.inditex.rrhh.icmclcwb.api.ptr.dto.PtrPropertiesDto;
 import com.inditex.rrhh.icmclcwb.api.ptr.util.PtrPropertiesConstants;
 import com.inditex.rrhh.icmclcwb.api.ptr.util.PtrTestConstants;
@@ -14,7 +13,7 @@ import com.inditex.rrhh.icmclcwb.api.ptr.venta.PtrGroupSellerTypeEnum;
 import com.inditex.rrhh.icmclcwb.api.ptr.venta.individualdetalle.dto.PtrVentaIndividualDetalleRequestDto;
 import com.inditex.rrhh.icmclcwb.api.ptr.venta.individualdetalle.dto.PtrVentaIndividualDetalleResponseDto;
 
-import org.apache.http.HttpStatus;
+import org.apache.hc.core5.http.HttpStatus;
 import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -23,7 +22,7 @@ import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.http.ResponseEntity;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
 
-@ExtendWith({SpringExtension.class, RandomizerExtension.class})
+@ExtendWith({SpringExtension.class})
 @Disabled
 public class PtrVentaEmpleadoServiceTest {
 
@@ -47,7 +46,7 @@ public class PtrVentaEmpleadoServiceTest {
     request.setFechaHasta(PtrTestConstants.FECHA_HASTA);
     request.setPais(PtrTestConstants.PAIS);
     request.setCadena(PtrTestConstants.CADENA);
-    request.setEmpresa(Arrays.asList(PtrTestConstants.ID_EMPRESA_VENTA_EMPLEADO));
+    request.setEmpresa(List.of(PtrTestConstants.ID_EMPRESA_VENTA_EMPLEADO));
     request.setTienda(PtrTestConstants.getID_TIENDA_VENTA_EMPLEADO());
     request.setAgrupacion(PtrGroupSellerTypeEnum.FECHA_TIENDA);
     request.setAgruparSeccion(PtrTestConstants.AGRUPAR_SECCION_FALSE);
@@ -55,7 +54,7 @@ public class PtrVentaEmpleadoServiceTest {
         this.ventaEmpleadoProperties.get(PtrPropertiesConstants.VENTA_INDIVIDUAL_DETALLE).getEndpoint(),
         request,
         PtrVentaIndividualDetalleResponseDto.class);
-    assertEquals(HttpStatus.SC_OK, response.getStatusCodeValue());
+    assertEquals(HttpStatus.SC_OK, response.getStatusCode().value());
   }
 
 }
