@@ -23,7 +23,8 @@ import java.util.Calendar;
 import java.util.Date;
 import java.util.List;
 
-import com.inditex.amigafwk.service.aaa.userdetails.sso.model.UserSSO;
+import com.inditex.amigafwk.service.aaa.userdetails.heimdal.HeimdalUser;
+import com.inditex.amigafwk.service.aaa.userdetails.heimdal.model.HeimdalUserDetails;
 import com.inditex.rrhh.icmclcwb.api.app.dto.IdProgramacionDto;
 import com.inditex.rrhh.icmclcwb.api.app.programacion.service.ProgramacionAmbitoService;
 import com.inditex.rrhh.icmclcwb.dto.ProgramacionAmbitoDTO;
@@ -79,12 +80,12 @@ class ProgramacionServiceImplTest {
         .thenReturn(new Programacion());
     when(this.programacionMapper.programacionToProgramacionDto(any(Programacion.class))).thenReturn(programacion);
     when(this.programacionRepository.save(any(Programacion.class))).thenReturn(new Programacion());
-    when(this.programacionAmbitoService.create(ArgumentMatchers.<List<ProgramacionAmbitoDTO>>any(),
+    when(this.programacionAmbitoService.create(ArgumentMatchers.any(),
         any(ProgramacionDTO.class)))
             .thenReturn(new ArrayList<>());
 
     final ProgramacionDTO result = this.programacionService.create(programacion);
-    Date date = TimeUtils.nowDate(); // Generado aquí para que no se diferencien las fechas en los equals por 1 segudno
+    final Date date = TimeUtils.nowDate(); // Generado aquí para que no se diferencien las fechas en los equals por 1 segudno
     assertNotNull(result);
     assertNotNull(result.getFechaHoraCreacion());
     assertEquals(DateUtils.truncate(date, Calendar.SECOND),
@@ -109,7 +110,7 @@ class ProgramacionServiceImplTest {
   void createTestSso() {
     final Authentication authentication = Mockito.mock(Authentication.class);
     // TODO [MDELRIO] Buscar manera de replicar este test con el nombre en blanco para cubrir test
-    Mockito.when(authentication.getPrincipal()).thenReturn(new UserSSO(null, "name", "url", Arrays.asList()));
+    Mockito.when(authentication.getPrincipal()).thenReturn(HeimdalUser.create(new HeimdalUserDetails(), List.of()));
     final SecurityContext securityContext = Mockito.mock(SecurityContext.class);
     Mockito.when(securityContext.getAuthentication()).thenReturn(authentication);
     SecurityContextHolder.setContext(securityContext);
@@ -124,7 +125,7 @@ class ProgramacionServiceImplTest {
         .thenReturn(new Programacion());
     when(this.programacionMapper.programacionToProgramacionDto(any(Programacion.class))).thenReturn(programacion);
     when(this.programacionRepository.save(any(Programacion.class))).thenReturn(new Programacion());
-    when(this.programacionAmbitoService.create(ArgumentMatchers.<List<ProgramacionAmbitoDTO>>any(),
+    when(this.programacionAmbitoService.create(ArgumentMatchers.any(),
         any(ProgramacionDTO.class)))
             .thenReturn(new ArrayList<>());
 
@@ -161,7 +162,7 @@ class ProgramacionServiceImplTest {
         .thenReturn(new Programacion());
     when(this.programacionMapper.programacionToProgramacionDto(any(Programacion.class))).thenReturn(programacion);
     when(this.programacionRepository.save(any(Programacion.class))).thenReturn(new Programacion());
-    when(this.programacionAmbitoService.create(ArgumentMatchers.<List<ProgramacionAmbitoDTO>>any(),
+    when(this.programacionAmbitoService.create(ArgumentMatchers.any(),
         any(ProgramacionDTO.class)))
             .thenReturn(new ArrayList<>());
 
