@@ -12,8 +12,6 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 
-import com.inditex.amigafwk.test.randomizer.Random;
-import com.inditex.amigafwk.test.randomizer.RandomizerExtension;
 import com.inditex.rrhh.icmclcwb.api.app.calcular.service.TipoDatoService;
 import com.inditex.rrhh.icmclcwb.api.app.dto.IdPersonaLocalDto;
 import com.inditex.rrhh.icmclcwb.api.app.tarea.dto.TareaDto;
@@ -24,6 +22,7 @@ import com.inditex.rrhh.icmclcwb.dto.TipoCalculoDTO;
 import com.inditex.rrhh.icmclcwb.dto.TipoComisionDTO;
 
 import org.apache.commons.lang3.reflect.FieldUtils;
+import org.instancio.Instancio;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -35,7 +34,7 @@ import org.springframework.jdbc.core.namedparam.MapSqlParameterSource;
 import org.springframework.jdbc.core.namedparam.NamedParameterJdbcTemplate;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
 
-@ExtendWith({SpringExtension.class, RandomizerExtension.class})
+@ExtendWith({SpringExtension.class})
 public class TareaCalculoAlgoritmoChallengeImporteTiendaSeccionV1RepositoryCustomImplTest {
 
   private final static String SQL_BASE = "SQL CALCULAR BASE";
@@ -56,15 +55,6 @@ public class TareaCalculoAlgoritmoChallengeImporteTiendaSeccionV1RepositoryCusto
 
   @InjectMocks
   private TareaCalculoAlgoritmoChallengeImporteTiendaSeccionV1RepositoryCustomImpl tareaCalculoAlgoritmoChallengeImporteTiendaSeccionV1RepositoryCustomImpl;
-
-  @Random
-  private AlgoritmoDTO algoritmo;
-
-  @Random
-  private TareaDto tarea;
-
-  @Random
-  private IdPersonaLocalDto persona;
 
   @BeforeEach
   public void setup() throws IllegalAccessException {
@@ -104,7 +94,7 @@ public class TareaCalculoAlgoritmoChallengeImporteTiendaSeccionV1RepositoryCusto
     tipoComision1.setId("011");
     tipoComision2.setId("012");
     when(algoritmo.getTipoCalculo()).thenReturn(
-        Arrays.asList(
+        List.of(
             tipoCalculo1));
     when(algoritmo.getTipoComision()).thenReturn(
         Arrays.asList(tipoComision1, tipoComision2));
@@ -152,7 +142,7 @@ public class TareaCalculoAlgoritmoChallengeImporteTiendaSeccionV1RepositoryCusto
     assertEquals(Arrays.asList("011", "012"), result.get(SqlPrimaryConstants.SQL_PARAM_IDS_TIPOS_COMISION));
     // tipocalculo
     assertTrue(result.containsKey(SqlPrimaryConstants.SQL_PARAM_IDS_TIPOS_CALCULO));
-    assertEquals(Arrays.asList("013"), result.get(SqlPrimaryConstants.SQL_PARAM_IDS_TIPOS_CALCULO));
+    assertEquals(List.of("013"), result.get(SqlPrimaryConstants.SQL_PARAM_IDS_TIPOS_CALCULO));
     // esDesplazamiento
     assertTrue(result.containsKey(SqlPrimaryConstants.SQL_PARAM_ES_DESPLAZAMIENTO));
     assertEquals(SqlPrimaryConstants.SQL_VALUE_BOOLEAN_FALSE,
@@ -174,7 +164,7 @@ public class TareaCalculoAlgoritmoChallengeImporteTiendaSeccionV1RepositoryCusto
     tipoComision1.setId("011");
     tipoComision2.setId("012");
     when(algoritmo.getTipoCalculo()).thenReturn(
-        Arrays.asList(
+        List.of(
             tipoCalculo1));
     when(algoritmo.getTipoComision()).thenReturn(
         Arrays.asList(tipoComision1, tipoComision2));
@@ -228,7 +218,7 @@ public class TareaCalculoAlgoritmoChallengeImporteTiendaSeccionV1RepositoryCusto
       assertEquals(Arrays.asList("011", "012"), value.getValue(SqlPrimaryConstants.SQL_PARAM_IDS_TIPOS_COMISION));
       // tipocalculo
       assertTrue(value.hasValue(SqlPrimaryConstants.SQL_PARAM_IDS_TIPOS_CALCULO));
-      assertEquals(Arrays.asList("013"), value.getValue(SqlPrimaryConstants.SQL_PARAM_IDS_TIPOS_CALCULO));
+      assertEquals(List.of("013"), value.getValue(SqlPrimaryConstants.SQL_PARAM_IDS_TIPOS_CALCULO));
       // esDesplazamiento
       assertTrue(value.hasValue(SqlPrimaryConstants.SQL_PARAM_ES_DESPLAZAMIENTO));
       assertEquals(SqlPrimaryConstants.SQL_VALUE_BOOLEAN_FALSE,
@@ -274,11 +264,15 @@ public class TareaCalculoAlgoritmoChallengeImporteTiendaSeccionV1RepositoryCusto
 
   @Test
   void getMapValues2() {
-    this.algoritmo.setDesplazamiento(true);
-    this.algoritmo.setDesplazamientoBase(true);
+    final var algoritmo = Instancio.create(AlgoritmoDTO.class);
+    final var tarea = Instancio.create(TareaDto.class);
+    final var persona = Instancio.create(IdPersonaLocalDto.class);
+
+    algoritmo.setDesplazamiento(true);
+    algoritmo.setDesplazamientoBase(true);
 
     final Map<String, Object> result = this.tareaCalculoAlgoritmoChallengeImporteTiendaSeccionV1RepositoryCustomImpl
-        .getMapValues(this.algoritmo, this.tarea, this.persona);
+        .getMapValues(algoritmo, tarea, persona);
 
     assertNotNull(result);
     assertEquals(result.get(SqlPrimaryConstants.SQL_PARAM_ES_DESPLAZAMIENTO_BASE), SqlPrimaryConstants.SQL_VALUE_BOOLEAN_TRUE);
