@@ -13,8 +13,6 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 
-import com.inditex.amigafwk.test.randomizer.Random;
-import com.inditex.amigafwk.test.randomizer.RandomizerExtension;
 import com.inditex.rrhh.icmclcwb.api.app.calcular.service.TipoDatoService;
 import com.inditex.rrhh.icmclcwb.api.app.dto.IdPersonaLocalDto;
 import com.inditex.rrhh.icmclcwb.api.app.dto.IdTipoDatoDto;
@@ -27,6 +25,7 @@ import com.inditex.rrhh.icmclcwb.dto.TipoCalculoDTO;
 import com.inditex.rrhh.icmclcwb.dto.TipoComisionDTO;
 
 import org.apache.commons.lang3.reflect.FieldUtils;
+import org.instancio.Instancio;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -38,7 +37,7 @@ import org.springframework.jdbc.core.namedparam.MapSqlParameterSource;
 import org.springframework.jdbc.core.namedparam.NamedParameterJdbcTemplate;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
 
-@ExtendWith({SpringExtension.class, RandomizerExtension.class})
+@ExtendWith({SpringExtension.class})
 public class TareaCalculoAlgoritmoDirectoVentaPorcentajeDiariaV1RepositoryCustomImplTest {
 
   private final static String SQL_BASE = "SQL CALCULAR BASE";
@@ -59,15 +58,6 @@ public class TareaCalculoAlgoritmoDirectoVentaPorcentajeDiariaV1RepositoryCustom
 
   @InjectMocks
   private TareaCalculoAlgoritmoDirectoVentaPorcentajeDiariaV1RepositoryCustomImpl tareaCalculoAlgoritmoDirectoVentaPorcentajeDiariaV1RepositoryCustom;
-
-  @Random
-  private AlgoritmoDTO algoritmo;
-
-  @Random
-  private TareaDto tarea;
-
-  @Random
-  private IdPersonaLocalDto persona;
 
   @BeforeEach
   public void setup() throws IllegalAccessException {
@@ -100,7 +90,7 @@ public class TareaCalculoAlgoritmoDirectoVentaPorcentajeDiariaV1RepositoryCustom
   public void getMapValuesTest() {
 
     when(this.tipoDatoService.findTipoDatoByTipoGrupoDato(any(Integer.class)))
-        .thenReturn(Arrays.asList(new IdTipoDatoDto(101)));
+        .thenReturn(List.of(new IdTipoDatoDto(101)));
     final AlgoritmoDTO algoritmo = mock(AlgoritmoDTO.class);
     when(algoritmo.getId()).thenReturn(1001);
     final TipoCalculoDTO tipoCalculo1 = new TipoCalculoDTO();
@@ -109,10 +99,10 @@ public class TareaCalculoAlgoritmoDirectoVentaPorcentajeDiariaV1RepositoryCustom
     tipoComision1.setId("008");
 
     when(algoritmo.getTipoCalculo()).thenReturn(
-        Arrays.asList(
+        List.of(
             tipoCalculo1));
     when(algoritmo.getTipoComision()).thenReturn(
-        Arrays.asList(tipoComision1));
+        List.of(tipoComision1));
     when(algoritmo.getDesplazamiento()).thenReturn(Boolean.FALSE);
     when(algoritmo.getDesplazamientoBase()).thenReturn(Boolean.FALSE);
     final TareaDto tarea = mock(TareaDto.class);
@@ -134,7 +124,7 @@ public class TareaCalculoAlgoritmoDirectoVentaPorcentajeDiariaV1RepositoryCustom
     assertEquals(SqlPrimaryConstants.SQL_VALUE_BOOLEAN_TRUE, result.get(SqlPrimaryConstants.SQL_PARAM_ACTIVO));
     // tipoDatoLocalizacionVentaSeccion
     assertTrue(result.containsKey(SqlPrimaryConstants.SQL_PARAM_TIPO_DATO_LOCALIZACION_VENTA_SECCION));
-    assertEquals(Arrays.asList(101),
+    assertEquals(List.of(101),
         result.get(SqlPrimaryConstants.SQL_PARAM_TIPO_DATO_LOCALIZACION_VENTA_SECCION));
     // idAlgoritmo
     assertTrue(result.containsKey(SqlPrimaryConstants.SQL_PARAM_ID_ALGORITMO));
@@ -157,10 +147,10 @@ public class TareaCalculoAlgoritmoDirectoVentaPorcentajeDiariaV1RepositoryCustom
     assertEquals(SqlPrimaryConstants.SQL_VALUE_BOOLEAN_TRUE, result.get(SqlPrimaryConstants.SQL_PARAM_CALCULA));
     // tipocomision
     assertTrue(result.containsKey(SqlPrimaryConstants.SQL_PARAM_IDS_TIPOS_COMISION));
-    assertEquals(Arrays.asList("008"), result.get(SqlPrimaryConstants.SQL_PARAM_IDS_TIPOS_COMISION));
+    assertEquals(List.of("008"), result.get(SqlPrimaryConstants.SQL_PARAM_IDS_TIPOS_COMISION));
     // tipocalculo
     assertTrue(result.containsKey(SqlPrimaryConstants.SQL_PARAM_IDS_TIPOS_CALCULO));
-    assertEquals(Arrays.asList("003"), result.get(SqlPrimaryConstants.SQL_PARAM_IDS_TIPOS_CALCULO));
+    assertEquals(List.of("003"), result.get(SqlPrimaryConstants.SQL_PARAM_IDS_TIPOS_CALCULO));
     // esDesplazamiento
     assertTrue(result.containsKey(SqlPrimaryConstants.SQL_PARAM_ES_DESPLAZAMIENTO));
     assertEquals(SqlPrimaryConstants.SQL_VALUE_BOOLEAN_FALSE,
@@ -176,7 +166,7 @@ public class TareaCalculoAlgoritmoDirectoVentaPorcentajeDiariaV1RepositoryCustom
   public void calcularTest() {
 
     when(this.tipoDatoService.findTipoDatoByTipoGrupoDato(any(Integer.class)))
-        .thenReturn(Arrays.asList(new IdTipoDatoDto(101)));
+        .thenReturn(List.of(new IdTipoDatoDto(101)));
 
     final AlgoritmoDTO algoritmo = mock(AlgoritmoDTO.class);
     when(algoritmo.getId()).thenReturn(1001);
@@ -186,10 +176,10 @@ public class TareaCalculoAlgoritmoDirectoVentaPorcentajeDiariaV1RepositoryCustom
     tipoComision1.setId("008");
 
     when(algoritmo.getTipoCalculo()).thenReturn(
-        Arrays.asList(
+        List.of(
             tipoCalculo1));
     when(algoritmo.getTipoComision()).thenReturn(
-        Arrays.asList(tipoComision1));
+        List.of(tipoComision1));
     when(algoritmo.getDesplazamiento()).thenReturn(Boolean.FALSE);
     when(algoritmo.getDesplazamientoBase()).thenReturn(Boolean.FALSE);
     final TareaDto tarea = mock(TareaDto.class);
@@ -220,7 +210,7 @@ public class TareaCalculoAlgoritmoDirectoVentaPorcentajeDiariaV1RepositoryCustom
           value.getValue(SqlPrimaryConstants.SQL_PARAM_ACTIVO));
       // tipoDatoLocalizacionVentaSeccion
       assertTrue(value.hasValue(SqlPrimaryConstants.SQL_PARAM_TIPO_DATO_LOCALIZACION_VENTA_SECCION));
-      assertEquals(Arrays.asList(101),
+      assertEquals(List.of(101),
           value.getValue(SqlPrimaryConstants.SQL_PARAM_TIPO_DATO_LOCALIZACION_VENTA_SECCION));
       // excluidoCalculo
       assertTrue(value.hasValue(SqlPrimaryConstants.SQL_PARAM_ID_ALGORITMO));
@@ -238,10 +228,10 @@ public class TareaCalculoAlgoritmoDirectoVentaPorcentajeDiariaV1RepositoryCustom
           value.getValue(SqlPrimaryConstants.SQL_PARAM_CALCULA));
       // tipocomision
       assertTrue(value.hasValue(SqlPrimaryConstants.SQL_PARAM_IDS_TIPOS_COMISION));
-      assertEquals(Arrays.asList("008"), value.getValue(SqlPrimaryConstants.SQL_PARAM_IDS_TIPOS_COMISION));
+      assertEquals(List.of("008"), value.getValue(SqlPrimaryConstants.SQL_PARAM_IDS_TIPOS_COMISION));
       // tipocalculo
       assertTrue(value.hasValue(SqlPrimaryConstants.SQL_PARAM_IDS_TIPOS_CALCULO));
-      assertEquals(Arrays.asList("003"), value.getValue(SqlPrimaryConstants.SQL_PARAM_IDS_TIPOS_CALCULO));
+      assertEquals(List.of("003"), value.getValue(SqlPrimaryConstants.SQL_PARAM_IDS_TIPOS_CALCULO));
       // esDesplazamiento
       assertTrue(value.hasValue(SqlPrimaryConstants.SQL_PARAM_ES_DESPLAZAMIENTO));
       assertEquals(SqlPrimaryConstants.SQL_VALUE_BOOLEAN_FALSE,
@@ -287,11 +277,15 @@ public class TareaCalculoAlgoritmoDirectoVentaPorcentajeDiariaV1RepositoryCustom
 
   @Test
   void getMapValuesTest2() {
-    this.algoritmo.setDesplazamientoBase(true);
-    this.algoritmo.setDesplazamiento(true);
+    final var algoritmo = Instancio.create(AlgoritmoDTO.class);
+    final var tarea = Instancio.create(TareaDto.class);
+    final var persona = Instancio.create(IdPersonaLocalDto.class);
+
+    algoritmo.setDesplazamientoBase(true);
+    algoritmo.setDesplazamiento(true);
 
     final Map<String, Object> result = this.tareaCalculoAlgoritmoDirectoVentaPorcentajeDiariaV1RepositoryCustom
-        .getMapValues(this.algoritmo, this.tarea, this.persona);
+        .getMapValues(algoritmo, tarea, persona);
 
     assertNotNull(result);
     assertEquals(result.get(SqlPrimaryConstants.SQL_PARAM_ES_DESPLAZAMIENTO), SqlPrimaryConstants.SQL_VALUE_BOOLEAN_TRUE);
