@@ -30,8 +30,6 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 
-import com.inditex.amigafwk.test.randomizer.Random;
-import com.inditex.amigafwk.test.randomizer.RandomizerExtension;
 import com.inditex.rrhh.icmclcwb.api.app.calcular.service.TipoDatoService;
 import com.inditex.rrhh.icmclcwb.api.app.dto.IdPersonaLocalDto;
 import com.inditex.rrhh.icmclcwb.api.app.dto.IdTipoDatoDto;
@@ -44,6 +42,7 @@ import com.inditex.rrhh.icmclcwb.dto.TipoCalculoDTO;
 import com.inditex.rrhh.icmclcwb.dto.TipoComisionDTO;
 
 import org.apache.commons.lang3.reflect.FieldUtils;
+import org.instancio.Instancio;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -55,7 +54,7 @@ import org.springframework.jdbc.core.namedparam.MapSqlParameterSource;
 import org.springframework.jdbc.core.namedparam.NamedParameterJdbcTemplate;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
 
-@ExtendWith({SpringExtension.class, RandomizerExtension.class})
+@ExtendWith({SpringExtension.class})
 public class TareaCalculoAlgoritmoPrecioHoraV1RepositoryCustomImplTest {
 
   private final static String SQL_BASE = "SQL CALCULAR BASE";
@@ -76,15 +75,6 @@ public class TareaCalculoAlgoritmoPrecioHoraV1RepositoryCustomImplTest {
 
   @InjectMocks
   private TareaCalculoAlgoritmoPrecioHoraV1RepositoryCustomImpl tareaCalculoAlgoritmoPrecioHoraV1RepositoryCustomImpl;
-
-  @Random
-  private AlgoritmoDTO algoritmo;
-
-  @Random
-  private TareaDto tarea;
-
-  @Random
-  private IdPersonaLocalDto persona;
 
   @BeforeEach
   public void setup() throws IllegalAccessException {
@@ -116,7 +106,7 @@ public class TareaCalculoAlgoritmoPrecioHoraV1RepositoryCustomImplTest {
 
     when(this.tipoDatoService
         .findTipoDatoByTipoGrupoDato(TipoGrupoDatoEnum.PRESENCIA_LOCALIZACION_SECCION_PERSONA_TIPOHORA.getId()))
-            .thenReturn(Arrays.asList(new IdTipoDatoDto(1011)));
+            .thenReturn(List.of(new IdTipoDatoDto(1011)));
     final AlgoritmoDTO algoritmo = mock(AlgoritmoDTO.class);
     when(algoritmo.getId()).thenReturn(1001);
     final TipoCalculoDTO tipoCalculo1 = new TipoCalculoDTO();
@@ -124,10 +114,10 @@ public class TareaCalculoAlgoritmoPrecioHoraV1RepositoryCustomImplTest {
     final TipoComisionDTO tipoComision1 = new TipoComisionDTO();
     tipoComision1.setId("013");
     when(algoritmo.getTipoCalculo()).thenReturn(
-        Arrays.asList(
+        List.of(
             tipoCalculo1));
     when(algoritmo.getTipoComision()).thenReturn(
-        Arrays.asList(tipoComision1));
+        List.of(tipoComision1));
     when(algoritmo.getDesplazamiento()).thenReturn(Boolean.FALSE);
     when(algoritmo.getDesplazamientoBase()).thenReturn(Boolean.FALSE);
     final TareaDto tarea = mock(TareaDto.class);
@@ -171,10 +161,10 @@ public class TareaCalculoAlgoritmoPrecioHoraV1RepositoryCustomImplTest {
     assertEquals(SQL_VALUE_BOOLEAN_FALSE, result.get(SQL_PARAM_INACTIVO));
     // tipocomision
     assertTrue(result.containsKey(SQL_PARAM_IDS_TIPOS_COMISION));
-    assertEquals(Arrays.asList("013"), result.get(SQL_PARAM_IDS_TIPOS_COMISION));
+    assertEquals(List.of("013"), result.get(SQL_PARAM_IDS_TIPOS_COMISION));
     // tipocalculo
     assertTrue(result.containsKey(SQL_PARAM_IDS_TIPOS_CALCULO));
-    assertEquals(Arrays.asList("014"), result.get(SQL_PARAM_IDS_TIPOS_CALCULO));
+    assertEquals(List.of("014"), result.get(SQL_PARAM_IDS_TIPOS_CALCULO));
     // esDesplazamiento
     assertTrue(result.containsKey(SQL_PARAM_ES_DESPLAZAMIENTO));
     assertEquals(SQL_VALUE_BOOLEAN_FALSE, result.get(SQL_PARAM_ES_DESPLAZAMIENTO));
@@ -183,7 +173,7 @@ public class TareaCalculoAlgoritmoPrecioHoraV1RepositoryCustomImplTest {
     assertEquals(SQL_VALUE_BOOLEAN_FALSE, result.get(SQL_PARAM_ES_DESPLAZAMIENTO_BASE));
     // tipoDatoLocalizacionPersonaPresencia
     assertTrue(result.containsKey(SQL_PARAM_TIPO_DATO_LOCALIZACION_PERSONA_PRESENCIA));
-    assertEquals(Arrays.asList(1011), result.get(SQL_PARAM_TIPO_DATO_LOCALIZACION_PERSONA_PRESENCIA));
+    assertEquals(List.of(1011), result.get(SQL_PARAM_TIPO_DATO_LOCALIZACION_PERSONA_PRESENCIA));
     // excluido calculo
     assertTrue(result.containsKey(SQL_PARAM_EXCLUIDO_CALCULO));
     assertEquals(SQL_VALUE_BOOLEAN_FALSE, result.get(SQL_PARAM_EXCLUIDO_CALCULO));
@@ -193,7 +183,7 @@ public class TareaCalculoAlgoritmoPrecioHoraV1RepositoryCustomImplTest {
   public void calcularTest() {
     when(this.tipoDatoService
         .findTipoDatoByTipoGrupoDato(TipoGrupoDatoEnum.PRESENCIA_LOCALIZACION_SECCION_PERSONA_TIPOHORA.getId()))
-            .thenReturn(Arrays.asList(new IdTipoDatoDto(1011)));
+            .thenReturn(List.of(new IdTipoDatoDto(1011)));
     final AlgoritmoDTO algoritmo = mock(AlgoritmoDTO.class);
     when(algoritmo.getId()).thenReturn(1001);
     final TipoCalculoDTO tipoCalculo1 = new TipoCalculoDTO();
@@ -201,10 +191,10 @@ public class TareaCalculoAlgoritmoPrecioHoraV1RepositoryCustomImplTest {
     final TipoComisionDTO tipoComision1 = new TipoComisionDTO();
     tipoComision1.setId("013");
     when(algoritmo.getTipoCalculo()).thenReturn(
-        Arrays.asList(
+        List.of(
             tipoCalculo1));
     when(algoritmo.getTipoComision()).thenReturn(
-        Arrays.asList(tipoComision1));
+        List.of(tipoComision1));
     when(algoritmo.getDesplazamiento()).thenReturn(Boolean.FALSE);
     when(algoritmo.getDesplazamientoBase()).thenReturn(Boolean.FALSE);
     final TareaDto tarea = mock(TareaDto.class);
@@ -252,10 +242,10 @@ public class TareaCalculoAlgoritmoPrecioHoraV1RepositoryCustomImplTest {
       assertEquals(SQL_VALUE_BOOLEAN_FALSE, value.getValue(SQL_PARAM_INACTIVO));
       // tipocomision
       assertTrue(value.hasValue(SQL_PARAM_IDS_TIPOS_COMISION));
-      assertEquals(Arrays.asList("013"), value.getValue(SQL_PARAM_IDS_TIPOS_COMISION));
+      assertEquals(List.of("013"), value.getValue(SQL_PARAM_IDS_TIPOS_COMISION));
       // tipocalculo
       assertTrue(value.hasValue(SQL_PARAM_IDS_TIPOS_CALCULO));
-      assertEquals(Arrays.asList("014"), value.getValue(SQL_PARAM_IDS_TIPOS_CALCULO));
+      assertEquals(List.of("014"), value.getValue(SQL_PARAM_IDS_TIPOS_CALCULO));
       // esDesplazamiento
       assertTrue(value.hasValue(SQL_PARAM_ES_DESPLAZAMIENTO));
       assertEquals(SQL_VALUE_BOOLEAN_FALSE, value.getValue(SQL_PARAM_ES_DESPLAZAMIENTO));
@@ -264,7 +254,7 @@ public class TareaCalculoAlgoritmoPrecioHoraV1RepositoryCustomImplTest {
       assertEquals(SQL_VALUE_BOOLEAN_FALSE, value.getValue(SQL_PARAM_ES_DESPLAZAMIENTO_BASE));
       // tipoDatoPersonaPresencia
       assertTrue(value.hasValue(SqlPrimaryConstants.SQL_PARAM_TIPO_DATO_LOCALIZACION_PERSONA_PRESENCIA));
-      assertEquals(Arrays.asList(1011),
+      assertEquals(List.of(1011),
           value.getValue(SqlPrimaryConstants.SQL_PARAM_TIPO_DATO_LOCALIZACION_PERSONA_PRESENCIA));
       // excluido calculo
       assertTrue(value.hasValue(SQL_PARAM_EXCLUIDO_CALCULO));
@@ -297,11 +287,14 @@ public class TareaCalculoAlgoritmoPrecioHoraV1RepositoryCustomImplTest {
 
   @Test
   void getMapValuesTest2() {
-    this.algoritmo.setDesplazamientoBase(true);
-    this.algoritmo.setDesplazamiento(true);
+    final var algoritmo = Instancio.create(AlgoritmoDTO.class);
+    final var persona = Instancio.create(IdPersonaLocalDto.class);
+    final var tarea = Instancio.create(TareaDto.class);
+    algoritmo.setDesplazamientoBase(true);
+    algoritmo.setDesplazamiento(true);
 
     final Map<String, Object> result = this.tareaCalculoAlgoritmoPrecioHoraV1RepositoryCustomImpl
-        .getMapValues(this.algoritmo, this.tarea, this.persona);
+        .getMapValues(algoritmo, tarea, persona);
 
     assertNotNull(result);
     assertEquals(result.get(SqlPrimaryConstants.SQL_PARAM_ES_DESPLAZAMIENTO), SqlPrimaryConstants.SQL_VALUE_BOOLEAN_TRUE);
